--- a/ForumApp/ForumApp/Views/_ViewImports.cshtml
+++ b/ForumApp/ForumApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ForumApp
-@using ForumApp.Models
+@using ForumViewModels
+@using ForumViewModels.Post
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
