View all events functionality added

--- a/Homies-ASP.NETFundamentalsExam–17June2023/Homies/Views/Event/All.cshtml
+++ b/Homies-ASP.NETFundamentalsExam–17June2023/Homies/Views/Event/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "All of the Events Around You";
 }
-
+@model ICollection<EventAllViewModel>
 
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
