--- a/Homies-ASP.NETFundamentalsExam–17June2023/Homies/Views/Event/Edit.cshtml
+++ b/Homies-ASP.NETFundamentalsExam–17June2023/Homies/Views/Event/Edit.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model EventPostModel
+
+@{
     ViewBag.Title = "Edit Info for an Event";
 }
 
-@*<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
 <div class="row">
@@ -47,4 +49,4 @@
 
 @section Scripts {
         <partial name="_ValidationScriptsPartial" />
-}*@
+}
