--- a/SoftUniBazarWebApp/SoftUniBazar/Views/Ad/All.cshtml
+++ b/SoftUniBazarWebApp/SoftUniBazar/Views/Ad/All.cshtml
@@ -1,4 +1,6 @@
-﻿@*@{
+﻿@model ICollection<ListAllAdViewModel>
+
+@{
     ViewBag.Title = "Selected Ads for You";
 }
 
@@ -37,4 +39,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-*@
