--- a/SoftUniBazarWebApp/SoftUniBazar/Views/_ViewImports.cshtml
+++ b/SoftUniBazarWebApp/SoftUniBazar/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SoftUniBazar
-@using SoftUniBazar.Models
+﻿@using SoftUniBazar.Models
+@using SoftUniBazar.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
