--- a/SoftUniBazarWebApp/SoftUniBazar/Views/Ad/Cart.cshtml
+++ b/SoftUniBazarWebApp/SoftUniBazar/Views/Ad/Cart.cshtml
@@ -1,4 +1,6 @@
-﻿@*@{
+﻿@model ICollection<ListAllAdViewModel>
+
+@{
     ViewBag.Title = "My Cart";
 }
 
@@ -32,4 +34,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
